Fixed Education Mobile Display Issue

--- a/src/EducationMobile/EducationMobile.css
+++ b/src/EducationMobile/EducationMobile.css
@@ -78,7 +78,7 @@
 	border-radius: 20px;
 	background-color: rgba(210, 199, 149, 0.8);
 	width: 80vw;
-	height: 480px;
+	height: 390px;
 }
 .Education-Bullets-Mobile {
 	display: flex;
